--- a/src/Components/carrinho/BagItens.module.css
+++ b/src/Components/carrinho/BagItens.module.css
@@ -34,6 +34,7 @@
 .price {
   font-family: var(--type-second);
   letter-spacing: 1.2px;
+  color: red;
 }
 .addAmount span {
   font-family: var(--type-second);
