--- a/src/Header.module.css
+++ b/src/Header.module.css
@@ -267,6 +267,7 @@ display: none;
   .header.noHome {
     padding: 20px 10px;
   }
+  .header.headerMobile,
   .header.styleHome,
   .header.styleHome.style2,
   .header.style2
