upload dos arquivos direto no google drive

--- a/src/Components/carrinho/Carrinho.module.css
+++ b/src/Components/carrinho/Carrinho.module.css
@@ -2,6 +2,10 @@
   padding: 20px;
   min-height: 80vh;
 }
+.nada {
+  margin-top: 32px;
+  font-size: 12px;
+}
 .checkCompra {
   width: 100%;
   background-color: white;
