--- a/src/Components/dashboard/categories/CreateCategory.module.css
+++ b/src/Components/dashboard/categories/CreateCategory.module.css
@@ -1,9 +1,16 @@
 .categorias {
   display: flex;
   overflow: auto;
+  max-width: 90%;
   gap: 16px;
   text-align: center;
   justify-content: center;
+  margin: 0 auto;
+}
+.wraper {
+  display: flex;
+  width: 100%;
+  gap: 30px;
 }
 
 .category {
