--- a/src/Components/dashboard/create/CreateProduct.module.css
+++ b/src/Components/dashboard/create/CreateProduct.module.css
@@ -83,4 +83,21 @@
   text-transform: uppercase;
 }
 
+@media (max-width:450px) {
+  .botoes{
+    width: 100%;
+    padding: 0;
+  }
+  .botoes button:nth-child(1) {
+    width: 100px;
+    height: 40px;
+    font-size: 12px;
+  }
+  .botoes button:nth-child(2) {
+    width: 110px;
+    height: 40px;
+    font-size: 12px;
+  }
+}
+
 
