--- a/src/helpers/ImageCategory.module.css
+++ b/src/helpers/ImageCategory.module.css
@@ -5,13 +5,14 @@
 
 .img {
   display: block;
-  max-width: 100%;
+  max-width: 125px;
   grid-area: 1/1;
   opacity: 0;
 }
 
 .skeleton {
   grid-area: 1/1;
+  width: 100%;
   height: 100%;
   background-image: linear-gradient(90deg, #eee 0px, #fff 50%, #eee 100%);
   background-color: #eee;
@@ -26,5 +27,11 @@
   }
   to{
     background-position: -200%;
+  }
+}
+
+@media (max-width: 35rem) {
+  .skeleton{
+    width: 100px;
   }
 }
