--- a/src/Components/photo/Photo.module.css
+++ b/src/Components/photo/Photo.module.css
@@ -5,13 +5,14 @@
   max-width:600px;
   margin: 0 auto;
 }
+
 .miniImages {
   display: grid;
   grid-template-rows: repeat(auto-fill , 75px );
   gap: 16px 0px;
 }
 .miniImages div{
-  width: auto;
+  width: minmax(80px, 100%);
   display: flex;
   object-fit: contain;
   border: 3px solid #FFBFD0;
@@ -20,7 +21,7 @@
 .miniImages div.active {
   border-color:  #E12959;
 }
-.miniImages div img {
+.miniImages div:last-child img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -32,11 +33,14 @@
   pointer-events: none;
 }
 
+/* Mobile */
+
 @media (max-width:50rem) {
   .imagens,
   .imagemPrincipal img{
     height: auto;
     max-height: 600px;
+    height: 400px;
   }
   .imagemPrincipal img {
     width: min-max(300px, 700px);
@@ -44,6 +48,20 @@
   .imagens {
     max-width: 500px;
   }
-
+}
+@media (max-width:50rem) {
+  .imagens{
+    height: auto;
+    max-height: 600px;
+    height: 400px;
+  }
+  .imagens {
+    max-width: 500px;
+  }
+}
+@media (max-width:40rem) {
+  /* .imagens {
+    height: 600px;
+  } */
 }
 
