--- a/src/Components/produtos/BreadCrumbs.module.css
+++ b/src/Components/produtos/BreadCrumbs.module.css
@@ -1,22 +1,17 @@
 .breadcrumbs {
   font-family: var(--type-second);
   font-size: 12px;
-  font-weight: 600;
   letter-spacing: 1.5px;
   line-height: 16px;
   list-style: none;
   margin: 0;
-  padding-left: 0;
   font-weight: 400;
-  padding-bottom: 1rem;
-  padding-top: 1rem;
   width: 100%;
   max-width: 1280px;
   padding-left: 10px;
 }
 .breadcrumbs nav {
-  padding-bottom: 1rem;
-  padding-top: 1rem;
+padding: 0.5rem 0;
 }
 .breadcrumbs nav ul {
   display: flex;
@@ -29,6 +24,20 @@
   color: black;
 }
 
+@media (max-width:50rem) {
+  .breadcrumbs nav {
+    padding: 0.275rem 0;
+  }
+  .breadcrumbs nav ul {
+    gap: 4px;
+    font-size: 10px;
+  }
+
+  .breadcrumbs {
+    padding: 0.5rem 0.5rem;
+  }
+}
+
 @media (max-width:35rem) {
   .breadcrumbs nav ul {
     gap: 4px;
@@ -39,5 +48,6 @@
   }
   .breadcrumbs {
     padding: 0.5rem 0.5rem;
+    display: none;
   }
 }
