--- a/src/helpers/Image.module.css
+++ b/src/helpers/Image.module.css
@@ -1,13 +1,18 @@
 .wrapperImg {
   display: grid;
   height: 100%;
+  width: 100%;
+  border: none !important;
 }
 
 .img {
   display: block;
-  max-width: 100%;
+  width: 100%;
+  height: 100%;
+  max-height:400px;
   grid-area: 1/1;
   opacity: 0;
+  object-fit: cover;
 }
 
 .skeleton {
@@ -25,5 +30,26 @@
   }
   to{
     background-position: -200%;
+  }
+}
+
+@media (max-width:35rem) {
+  .img,
+  .wrapperImg {
+    height: 600px;
+    max-height: 600px;
+  }
+}
+
+@media (max-width:30rem) {
+  .img,
+  .wrapperImg {
+    height: 500px;
+  }
+}
+@media (max-width:24rem) {
+  .img,
+  .wrapperImg {
+    height: 450px;
   }
 }
