--- a/src/Components/produtos/Produtos.module.css
+++ b/src/Components/produtos/Produtos.module.css
@@ -6,65 +6,22 @@
   text-align: center;
   max-width: 1280px;
   min-height: 600px;
+  margin-top: 64px;
 }
 .subtitleProduct {
   margin-bottom: 64px !important;
 }
 
-.criar{
-  width: max-content;
-  margin: 0 auto;
-  margin-top: 64px;
-  background-color: black;
-  cursor: pointer;
-  border: none;
-  padding: 16px 32px;
-  color: #FFF;
-  font-size: 16px;
-  font-weight: 700;
-  position: relative;
-  border-radius: 12px;
-}
-
-.criar::before{
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(45deg,red,blue,deeppink,blue,red,blue,deeppink
-  ,blue);
-  background-size: 800%;
-  border-radius: 10px;
-  filter: blur(8px);
-  animation: glowing 25s linear infinite;
-  transition: 0.2s;
-}
-
-
-@keyframes glowing {
-  0% {
-    background-position: 0 0;
-  }
-  50% {
-    background-position: 400% 0;
-  }
-  100% {
-    background-position: 0 0;
-  }
-}
 .produtos {
   display: grid;
   grid-template-columns: repeat(3, minmax(170px, 1fr));
-  gap: 32px;
+  gap: 64px 20px;
   padding: 0 20px;
   min-height: 600px;
 }
 @media (max-width:50rem) {
   .produtosContainer {
-    margin-top: 16px;
+    margin-top: 0px;
   }
   .produtos {
   grid-template-columns: repeat(2, minmax(140px, 1fr));
@@ -77,15 +34,9 @@
 }
 
 @media (max-width:40rem) {
-  .produtosContainer {
-    margin-top: 0px;
-  }
-  .produtos {
-  grid-template-columns: repeat(2, minmax(140px, 1fr));
-  padding: 0 10px;
-  gap: 16px;
-  }
+
+
   .produtosContainer h3 {
-    margin-bottom: 16px;
+    margin-bottom: 32px;
   }
 }
