--- a/src/Components/carrinho/BagItens.module.css
+++ b/src/Components/carrinho/BagItens.module.css
@@ -9,6 +9,8 @@
   gap: 16px;
   box-shadow: 0 0 3px 1px rgba(0, 0, 0, .2);
   position: relative;
+  max-width: 600px;
+  margin: 0 auto;
 }
 .image {
   height: 100px;
