--- a/src/Components/produtos/Produto.module.css
+++ b/src/Components/produtos/Produto.module.css
@@ -16,10 +16,10 @@
   object-fit: fill;
 }
 .infos {
-  display: grid;
-  grid-template-columns: 1fr auto;
-  grid-template-rows: 1fr auto;
+  display: flex;
+  flex-direction: column;
   gap: 4px;
+  position: relative;
 }
 
 .title {
@@ -36,14 +36,19 @@
   font-family: var(--type-second);
   font-weight: 400;
 }
-.model {
-  grid-row: 2;
-  grid-column: 1/-1;
-  text-align: start;
-  font-size: 12px;
-  font-weight: 400;
-  font-family: var(--type-second);
+.bag {
+  background: #e7e7e7;
+  border-radius: 9999px;
+  width: 27px;
+  height: 27px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  right: 10px;
+  top: -5px;
 }
+
 @media (max-width: 50rem) {
 
   .price {
