--- a/src/Components/produtos/ProdutoSingle.module.css
+++ b/src/Components/produtos/ProdutoSingle.module.css
@@ -3,10 +3,12 @@
   margin: 0 auto;
   object-fit: cover;
   padding: 0 10px;
-  display: flex;
-  /* grid-template-columns: 1fr 1fr ; */
+  display: grid;
+  padding: 0 20px;
+  grid-template-columns: 1fr 1fr ;
   flex-direction: column;
   gap: 2rem;
+  margin-top: 32px;
 }
 
 .ProductView_images{
@@ -42,7 +44,7 @@ h1 {
 }
 
 .brand {
-  font-family: Quicksand;
+  font-family: var(--type-second);
   font-size: 11px;
   font-weight: 600;
   letter-spacing: 1.5px;
@@ -109,11 +111,11 @@ h1 {
   line-height: 1;
 }
 .spanCor {
-  font-family: Quicksand;
+  font-family: var(--type-second);
   font-size: 14px;
   font-weight: 400;
   letter-spacing: 1.5px;
-  line-height: 22px;
+  line-height: 14px;
   margin-bottom: 8px;
 }
 .form_radio_container{
@@ -131,6 +133,7 @@ h1 {
   height: 20px;
   border-radius: 50%;
   z-index: 100;
+  box-shadow: inset 0 0 2px 1px rgba(0, 0, 0, 0.1);
 }
 .cores {
   width: 26px;
@@ -142,7 +145,6 @@ h1 {
   color: transparent;
   padding: 2px;
 }
-
 
 .formRadio:checked {
   border-color: #333;
@@ -215,7 +217,7 @@ left: -2.25rem;
   margin-top: 32px;
 }
 .descricao p{
-  font-family: Quicksand;
+  font-family: var(--type-second);
   font-size: 12px;
   font-weight: 400;
   letter-spacing: 1.5px;
@@ -225,19 +227,20 @@ left: -2.25rem;
   margin-bottom: 1rem;
 }
 .descricaoTexto {
-  font-family: Quicksand;
+  font-family: var(--type-second);
   font-size: 12px;
   font-weight: 400;
   letter-spacing: 1.5px;
   line-height: 20px;
 }
 
-@media (max-width:50rem) {
+@media (max-width:700px) {
   .ProductView_container {
     display: flex ;
     flex-direction: column;
     gap: 1rem;
     padding: 0;
+    margin: 0;
   }
   .ProductView_images {
     width: 100%;
@@ -245,14 +248,15 @@ left: -2.25rem;
   .ProductView_details {
     padding: 0 10px;
   }
-  .price {
-    font-size: 16px;
-  }
+
   .colors {
     margin-top: 8px;
   }
   .estoque{
     margin-top: 16px;
+  }
+  .estoque h3 {
+    margin-bottom: 0;
   }
   .adicionar{
     margin-top: 16px;
@@ -265,6 +269,7 @@ left: -2.25rem;
 @media (max-width:35rem) {
   .ProductView_container {
     width: 100%;
+    gap: 0;
   }
   .form_radio_container {
     gap: 1rem;
@@ -272,6 +277,20 @@ left: -2.25rem;
   }
   .ProductView_images{
     height: 600px;
+    position: sticky;
+    top: 0;
+  }
+  .ProductView_details {
+    background-color: white;
+    padding-top: 0.5rem;
+    z-index: 1000;
+  }
+  .brand{
+    display: block;
+    padding-bottom: 8px;
+  }
+  .name {
+    line-height: 24px;
   }
 }
 @media (max-width:30rem) {
