--- a/src/Components/produtos/ProdutoSingle.module.css
+++ b/src/Components/produtos/ProdutoSingle.module.css
@@ -246,7 +246,7 @@ left: -2.25rem;
     width: 100%;
   }
   .ProductView_details {
-    padding: 0 10px;
+    padding: 0 10px 64px 10px;
   }
 
   .colors {
@@ -276,6 +276,7 @@ left: -2.25rem;
     grid-template-columns: repeat(auto-fill, 2rem);
   }
   .ProductView_images{
+    padding-top: 60px;
     height: 600px;
     position: sticky;
     top: 0;
