--- a/src/Header.module.css
+++ b/src/Header.module.css
@@ -6,45 +6,8 @@
 }
 .header.styleHome {
   position: absolute;
+  margin-top: 2.5rem;
   padding: 20px;
-}
-
-.nav .mobile {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0;
-}
-.nav .bag {
-  position: absolute;
-  bottom: 0px;
-  right: -100px;
-}
-.mobile .bag {
-  width: 100%;
-  position: relative;
-  bottom: initial;
-  right: initial;
-  cursor: pointer;
-}
-
-.noHome {
-  box-shadow: 0 0 0px 1px rgba(0, 0, 0, .2);
-  top: -39px;
-}
-
-.noHome .mobile .logo svg{
-  width: 100px;
-  height: 40px;
-}
-.styleHome .nav .navComputer .links{
-  color: white;
-}
-
-.logo {
-  width: max-content;
-  margin: 0 auto;
-  margin-bottom: 16px;
 }
 
 .nav {
@@ -62,11 +25,16 @@
   margin: 0 auto;
 }
 
-
-
-.links:global(.active) {
-  box-shadow: 0 1px black;
+.noHome {
+  box-shadow: 0 0 0px 1px rgba(0, 0, 0, .2);
 }
+
+/* Logo */
+.noHome .mobile .logo svg{
+  width: 100px;
+  height: 40px;
+}
+
 .logo a:global(.active){
   border: none;
 }
@@ -74,17 +42,90 @@
   border: none;
 }
 
+.logo {
+  width: max-content;
+  margin: 0 auto;
+  margin-bottom: 16px;
+}
+
+
+/* LINKS */
+.styleHome .nav .navComputer .links{
+  color: white;
+}
+.links:global(.active) {
+  box-shadow: 0 1px black;
+}
 
 .styleHome .links:hover {
   box-shadow: 0 1px white;
 }
 
+
+
+/* BAG */
+.nav .bag {
+  position: absolute;
+  bottom: 0px;
+  right: -100px;
+}
+
 /* Mobile */
+
 .nav.mobile {
   display: grid;
   grid-template-columns: 100px 110px;
   justify-content: space-between;
   padding: 0 20px;
+}
+.navMobile {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  transform: translateZ(0);
+  height: 100vh;
+  background: rgba(255, 255, 255, 0.9);
+  box-sizing: border-box;
+  color: #333;
+  width: max-content;
+  top: 0;
+  left:0 ;
+  padding: 135px 30px 20px 45px;
+  z-index: 100;
+  transition: all .5s;
+}
+.navMobile.active {
+  opacity: 1;
+  pointer-events: initial;
+}
+
+.navMobile.animeLeftBack{
+  opacity: 0;
+  transform: translateX(0px);
+  animation: animeLeftBack 1s ease forwards;
+}
+.navContainer {
+  display: block;
+  position: fixed;
+  transform: translateZ(0);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, .4);
+  z-index: 2;
+  backdrop-filter: blur(3px);
+}
+
+
+/* BAG */
+
+.mobile .bag {
+  width: 100%;
+  position: relative;
+  bottom: initial;
+  right: initial;
+  cursor: pointer;
 }
 
 .objetos {
@@ -96,6 +137,8 @@
   gap: 32px;
   position: relative;
 }
+
+/* LINKS */
 .links {
   display: inline-grid;
   letter-spacing: 1.5px;
@@ -115,26 +158,6 @@
   gap: 32px;
   align-items: center;
 }
-.navMobile {
-  display: flex;
-  flex-direction: column;
-  position: fixed;
-  transform: translateZ(0);
-  height: 100vh;
-  background: rgba(255, 255, 255, 0.9);
-  box-sizing: border-box;
-  color: #333;
-  width: max-content;
-  top: 0;
-  left:0 ;
-  padding: 135px 30px 20px 45px;
-  z-index: 100;
-  transition: all .5s;
-}
-.mobile .logo {
-  justify-self: initial;
-  margin-bottom: 0;
-}
 .navMobile .links::after {
   content: "";
     width: 25px;
@@ -144,16 +167,14 @@
     align-self: flex-end;
 }
 
-.navMobile.active {
-  opacity: 1;
-  pointer-events: initial;
+
+/* LOGO */
+.mobile .logo {
+  justify-self: initial;
+  margin-bottom: 0;
 }
 
-.navMobile.animeLeftBack{
-  opacity: 0;
-  transform: translateX(0px);
-  animation: animeLeftBack 1s ease forwards;
-}
+/* MOBILE BUTTON */
 
 @keyframes animeLeftBack {
   0% {
@@ -185,18 +206,6 @@
 }
 .mobileButton.buttonWhite {
   color: #fff;
-}
-.navContainer {
-  display: block;
-  position: fixed;
-  transform: translateZ(0);
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, .4);
-  z-index: 2;
-  backdrop-filter: blur(3px);
 }
 
 .mobileButton::after {
@@ -246,12 +255,25 @@
 }
 @media (max-width:700px) {
 
-  .nav.mobile {
-    display: grid;
-    align-items: center;
-    padding: 0 10px 0 20px;
-    height: 60px;
+  /* Header/Nav */
+  .header.headerMobile,
+  .header.styleHome {
+    padding: 0;
   }
+.nav.mobile {
+  display: grid;
+  align-items: center;
+  padding: 0 10px 0 20px;
+  height: 60px;
+  }
+
+  /* LOGO */
+  .logo svg{
+    width: 150px;
+    height: 70px;
+  }
+
+  /* BAG */
 .mobile .bag {
   width: max-content;
 }
@@ -259,44 +281,48 @@
   width: max-content;
   justify-self: end;
 }
-  .header.headerMobile,
-  .header.styleHome {
-    padding: 0;
-  }
-
-  .logo svg{
-    width: 150px;
-    height: 70px;
-  }
 
 }
 
 @media (max-width:35rem) {
+/* HEADER / NAV */
+.header.noHome {
+  position: fixed;
+  top: 0;
+  background-color: white;
+}
 
-  .objetos {
-    width: 80px;
-    position: relative;
-    gap: 16px;
-  }
 
-  .logo svg{
-    width: 120px;
-  }
-    .logo svg {
-      height: 50px;
-    }
-  .bag svg{
-    width: 20px;
-    height: 20px;
-  }
-  .mobileButton {
+/* LOGO */
+.logo svg{
+  width: 120px;
+}
+.logo svg {
+  height: 50px;
+}
+
+/* BAG */
+
+.bag svg{
+  width: 20px;
+  height: 20px;
+}
+.objetos {
+  width: 80px;
+  position: relative;
+  gap: 16px;
+}
+
+
+/* MOBILE BUTTON */
+.mobileButton {
     width: 35px;
     height: 30px;
   }
-
 }
 
 @media (max-width:450px) {
+  /* HEADER / NAV */
   .navMobile {
     width: 230px;
     padding: 135px 20px 20px 20px;
@@ -304,7 +330,13 @@
   .nav ul {
     gap: 16px;
   }
+
+  /* LINKS */
   .navMobile .links {
     font-size: 12px;
   }
+  /* LOGO */
+
+  /* BAG */
+
 }
