--- a/src/Components/photo/Photo.module.css
+++ b/src/Components/photo/Photo.module.css
@@ -47,7 +47,7 @@
   align-items: center;
   justify-content: center;
   position: absolute;
-  bottom: 0;
+  bottom:60px;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 5000;
   left: 50%;
