--- a/src/Header.module.css
+++ b/src/Header.module.css
@@ -82,7 +82,6 @@
   display: flex;
   flex-direction: column;
   position: fixed;
-  transform: translateZ(0);
   height: 100vh;
   background: rgba(255, 255, 255, 0.9);
   box-sizing: border-box;
@@ -92,7 +91,7 @@
   left:0 ;
   padding: 135px 30px 20px 45px;
   z-index: 100;
-  transition: all .5s;
+  transform: translateX(-100%);
 }
 .navMobile.active {
   opacity: 1;
@@ -179,7 +178,7 @@
 @keyframes animeLeftBack {
   0% {
     opacity: 1;
-    transform: translateX(0);
+    transform: inherit;
   }
   90% {
     opacity: 1;
@@ -286,7 +285,7 @@
 
 @media (max-width:35rem) {
 /* HEADER / NAV */
-.header.noHome {
+.header.noHome.productSingle {
   position: fixed;
   top: 0;
   background-color: white;
