--- a/src/Components/carrinho/Carrinho.module.css
+++ b/src/Components/carrinho/Carrinho.module.css
@@ -18,7 +18,8 @@
   left: 0;
   height: max-content;
   padding: 10px 20px;
-  box-shadow: 0 0 2px 0 rgba(0, 0, 0, .5),0 0 4px 0 rgba(0, 0, 0, .2)
+  box-shadow: 0 0 2px 0 rgba(0, 0, 0, .5),0 0 4px 0 rgba(0, 0, 0, .2);
+  z-index: 11000;
 }
 .containerCheck {
   width: 100%;
