--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,7 @@ a {
   max-width: 80rem;
   margin: 0 auto;
   padding-top: 20px;
+  padding-bottom: 64px;
 }
 .mainContainer {
   margin-top: 4rem;
@@ -77,7 +78,7 @@ a {
 }
 
 .subtitle {
-  font-family:Quicksand ;
+  font-family:var(--type-second) ;
   font-size: 24px;
   letter-spacing: 1.5px;
   line-height: 24px;
@@ -96,7 +97,7 @@ a {
   position: fixed;
   bottom: 30px;
   right: 10px;
-  z-index: 10000;
+  z-index: 99999;
 }
 .btnZap svg {
   cursor: pointer;
@@ -147,6 +148,11 @@ a {
   transform: translateX(-220px);
   animation: animeLeft 1s forwards;
 }
+.animeTop{
+  opacity: 0;
+  transform: translateY(-40px);
+  animation: animeLeft .5s forwards;
+}
 .animeLeftRight{
   opacity: 0;
   transform: translateX(40px);
@@ -173,6 +179,12 @@ a {
 
 
 
+@keyframes animeLeft {
+  to {
+    opacity: 1;
+    transform: initial;
+  }
+}
 @keyframes animeLeft {
   to {
     opacity: 1;
