--- a/src/Components/carrinho/OpenBox.module.css
+++ b/src/Components/carrinho/OpenBox.module.css
@@ -13,7 +13,7 @@
 .divOpen{
   position: relative;
   width: 300px;
-  height: 400px;
+  height: 350px;
   background-color: white;
   top: -100px;
   border-radius: 10px;
@@ -50,7 +50,7 @@
   font-weight: 600;
   text-align: center;
   position: relative;
-  bottom: -100px;
+  bottom: -30px;
   cursor: pointer;
 }
 
@@ -75,40 +75,6 @@
   }
 }
 
-@-webkit-keyframes scale-in-ver-top {
-  0% {
-    -webkit-transform: scaleY(0);
-            transform: scaleY(0);
-    -webkit-transform-origin: 100% 0%;
-            transform-origin: 100% 0%;
-    opacity: 1;
-  }
-  100% {
-    -webkit-transform: scaleY(1);
-            transform: scaleY(1);
-    -webkit-transform-origin: 100% 0%;
-            transform-origin: 100% 0%;
-    opacity: 1;
-  }
-}
-@keyframes scale-in-ver-top {
-  0% {
-    -webkit-transform: scaleY(0);
-            transform: scaleY(0);
-    -webkit-transform-origin: 100% 0%;
-            transform-origin: 100% 0%;
-    opacity: 1;
-  }
-  100% {
-    -webkit-transform: scaleY(1);
-            transform: scaleY(1);
-    -webkit-transform-origin: 100% 0%;
-            transform-origin: 100% 0%;
-    opacity: 1;
-  }
-}
-
-
  @-webkit-keyframes scale-up-center {
   0% {
     -webkit-transform: scale(0.5);
@@ -127,5 +93,12 @@
   100% {
     -webkit-transform: scale(1);
             transform: scale(1);
+  }
+}
+
+@media (max-width:500px) {
+  .divOpen {
+    width: 280px;
+    padding: 0;
   }
 }
