--- a/src/Components/produtos/Produtos.module.css
+++ b/src/Components/produtos/Produtos.module.css
@@ -7,6 +7,7 @@
   max-width: 1280px;
   min-height: 600px;
   margin-top: 64px;
+  padding-bottom: 64px;
 }
 .subtitleProduct {
   margin-bottom: 64px !important;
