--- a/src/Header.module.css
+++ b/src/Header.module.css
@@ -1,7 +1,7 @@
 .header {
   position: relative;
   width: 100%;
-  z-index: 2000;
+  z-index: 99999;
   padding: 20px 0;
 }
 .header.styleHome {
@@ -11,6 +11,7 @@
 }
 
 .nav {
+  position: relative;
   max-width: 1280px;
   margin: 0 auto;
   display: flex;
@@ -30,10 +31,6 @@
 }
 
 /* Logo */
-.noHome .mobile .logo svg{
-  width: 100px;
-  height: 40px;
-}
 
 .logo a:global(.active){
   border: none;
@@ -62,21 +59,24 @@
 }
 
 
-
 /* BAG */
 .nav .bag {
   position: absolute;
-  bottom: 0px;
-  right: -100px;
+  bottom: 5px;
+  right: 20px;
 }
 
 /* Mobile */
 
 .nav.mobile {
   display: grid;
-  grid-template-columns: 100px 110px;
+  grid-template-columns: 40px max-content 45px;
+  align-items: center;
   justify-content: space-between;
   padding: 0 20px;
+}
+.styleHome .navMobile {
+  top: 0;
 }
 .navMobile {
   display: flex;
@@ -87,7 +87,7 @@
   box-sizing: border-box;
   color: #333;
   width: max-content;
-  top: 0;
+  top: 85px;
   left:0 ;
   padding: 135px 30px 20px 45px;
   z-index: 100;
@@ -103,11 +103,16 @@
   transform: translateX(0px);
   animation: animeLeftBack 1s ease forwards;
 }
+
+.styleHome .navContainer {
+  top: 0;
+}
+
 .navContainer {
   display: block;
   position: fixed;
   transform: translateZ(0);
-  top: 0;
+  top: 84px;
   left: 0;
   width: 100%;
   height: 100vh;
@@ -120,22 +125,14 @@
 /* BAG */
 
 .mobile .bag {
-  width: 100%;
+  width: 25px;
   position: relative;
   bottom: initial;
   right: initial;
   cursor: pointer;
 }
 
-.objetos {
-  display: flex;
-  width: 80%;
-  max-width: 1280px;
-  align-items: center;
-  justify-content: center;
-  gap: 32px;
-  position: relative;
-}
+
 
 /* LINKS */
 .links {
@@ -168,6 +165,11 @@
 
 
 /* LOGO */
+.noHome .mobile .logo svg{
+  width: 100px;
+  height: 40px;
+}
+
 .mobile .logo {
   justify-self: initial;
   margin-bottom: 0;
@@ -251,6 +253,7 @@
   height: 20px;
   width: 20px;
   border-radius: 50%;
+  pointer-events: none;
 }
 @media (max-width:700px) {
 
@@ -276,9 +279,12 @@
 .mobile .bag {
   width: max-content;
 }
-.objetos {
-  width: max-content;
-  justify-self: end;
+.navContainer {
+  top: 61px;
+}
+.navMobile {
+  top:61px;
+
 }
 
 }
@@ -301,17 +307,10 @@
 }
 
 /* BAG */
-
 .bag svg{
   width: 20px;
   height: 20px;
 }
-.objetos {
-  width: 80px;
-  position: relative;
-  gap: 16px;
-}
-
 
 /* MOBILE BUTTON */
 .mobileButton {
