Correção de bug ao entrar na pagina e o tamanho P estar selecionado mesmo indisponivel, correção dos tamanhos selecionados na tela do carrinho

--- a/src/Components/carrinho/Carrinho.module.css
+++ b/src/Components/carrinho/Carrinho.module.css
@@ -1,6 +1,9 @@
 .bagItens {
+  position: relative;
   padding: 20px;
   min-height: 80vh;
+  padding-bottom: 64px;
+  z-index: 10001;
 }
 .bagItens h2 {
   margin-bottom: 32px;
@@ -126,5 +129,6 @@
 @media (max-width:550px) {
   .bagItens {
     padding: 10px;
+    padding-bottom: 64px;
   }
 }
