--- a/src/Components/produtos/Produto.module.css
+++ b/src/Components/produtos/Produto.module.css
@@ -1,19 +1,16 @@
 .produto {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: 460px 50px;
   gap: 16px 0;
   height: max-content;
 }
 .divImage {
-  height: minmax(330px, 500px);
+  height:100%;
 }
 .produto img {
   border-radius: .2rem;
-  width: 100%;
-  height: 100%;
-  max-height: 450px;
-  max-width: 350px;
-  object-fit: fill;
+  min-height: 460px;
+  object-fit: cover;
 }
 .infos {
   display: flex;
@@ -49,10 +46,63 @@
   top: -5px;
 }
 
-@media (max-width: 50rem) {
+@media (max-width:1100px) {
+  .produto {
+    grid-template-rows: 500px 50px;
+  }
+  .produto img {
+    min-height: 500px;
+  }
+}
 
+@media (max-width: 50rem) {
+  .produto {
+    grid-template-rows: 400px 50px;
+  }
+  .produto img {
+    min-height: 400px;
+    max-height: 400px;
+  }
   .price {
   margin-right: 10px;
   }
+}
 
+@media (max-width: 40rem) {
+  .produto {
+    grid-template-rows: 300px 50px;
+  }
+  .produto img {
+    min-height: 300px;
+    max-height: 300px;
+  }
+  .price {
+  margin-right: 10px;
+  }
+}
+
+@media (max-width: 550px) {
+  .produto {
+    grid-template-rows: 280px 50px;
+  }
+  .produto img {
+    min-height: 280px;
+    max-height: 280px;
+  }
+  .price {
+  margin-right: 10px;
+  }
+}
+
+@media (max-width: 30rem) {
+  .produto {
+    grid-template-rows: 230px 50px;
+  }
+  .produto img {
+    min-height: 230px;
+    max-height: 230px;
+  }
+  .price {
+  margin-right: 10px;
+  }
 }
