--- a/src/Components/produtos/Produtos.module.css
+++ b/src/Components/produtos/Produtos.module.css
@@ -20,24 +20,51 @@
   padding: 0 20px;
   min-height: 600px;
 }
+
+@media (max-width:1100px) {
+  .produtos {
+    grid-template-columns: repeat(2, minmax(140px, 450px));
+    justify-content: center;
+    padding: 0 20px;
+    gap: 32px ;
+    }
+}
+
 @media (max-width:50rem) {
+    .produtos {
+    grid-template-columns: repeat(2, minmax(140px, 350px));
+    gap: 32px ;
+    }
   .produtosContainer {
     margin-top: 0px;
   }
-  .produtos {
-  grid-template-columns: repeat(2, minmax(140px, 1fr));
-  padding: 0 10px;
-  gap: 32px 16px;
-  }
+
   .produtosContainer h3 {
     margin-bottom: 16px;
   }
 }
 
 @media (max-width:40rem) {
-
+  .produtos {
+    grid-template-columns: repeat(2, minmax(140px, 280px));
+    gap: 32px ;
+    }
 
   .produtosContainer h3 {
     margin-bottom: 32px;
   }
 }
+
+@media (max-width:550px) {
+  .produtos {
+    grid-template-columns: repeat(2, minmax(140px, 250px));
+    }
+}
+@media (max-width:30rem) {
+  .produtos {
+    grid-template-columns: repeat(2, minmax(140px, 220px));
+    gap: 32px 16px;
+    padding: 0px 10px;
+    }
+}
+
