--- a/src/Components/carrinho/BagItens.module.css
+++ b/src/Components/carrinho/BagItens.module.css
@@ -65,6 +65,7 @@
 .addAmount .disabled {
   opacity: 0.6;
   border: 1px solid rgba(0, 0, 0, 0);
+  cursor: not-allowed;
 }
 .description {
   font-family: var(--type-second);
