--- a/src/Components/produtos/ProdutoSingle.module.css
+++ b/src/Components/produtos/ProdutoSingle.module.css
@@ -239,29 +239,43 @@ left: -2.25rem;
   width: 100vw;
   height: 100vh;
   position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   top: 0;
   left: 0;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.85);
   z-index: 999999;
+  opacity: 0;
+  animation: toAppear .4s ease forwards;
 }
 .fechar {
   position: absolute;
   color: white;
   cursor: pointer;
   padding: 20px;
+  top: 0;
+  left: 0;
 }
 .imageFullScren {
-  margin-top: 60px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  width: max-content;
+  height: auto;
 }
 .imageFullScren img {
   width: 100%;
+  max-width: max-content;
   display: block;
-  max-height: 90vh;
-}
+  object-fit: contain;
+  max-height: 85vh;
 
+}
+@keyframes toAppear {
+  to {
+    opacity: 1;
+  }
+}
 @media (max-width:700px) {
   .ProductView_container {
     display: flex ;
