--- a/src/helpers/ImageSingle.module.css
+++ b/src/helpers/ImageSingle.module.css
@@ -1,5 +1,5 @@
 .wrapperImg {
-  display: grid;
+  display: block;
   height: 100%;
   width: 100%;
   border: none !important;
@@ -9,7 +9,6 @@
   display: block;
   width: 100%;
   height: 100%;
-  max-height:400px;
   grid-area: 1/1;
   opacity: 0;
   object-fit: cover;
@@ -30,26 +29,5 @@
   }
   to{
     background-position: -200%;
-  }
-}
-
-@media (max-width:35rem) {
-  .img,
-  .wrapperImg {
-    height: 600px;
-    max-height: 600px;
-  }
-}
-
-@media (max-width:30rem) {
-  .img,
-  .wrapperImg {
-    height: 500px;
-  }
-}
-@media (max-width:24rem) {
-  .img,
-  .wrapperImg {
-    height: 450px;
   }
 }
