--- a/src/Components/Categorias.module.css
+++ b/src/Components/Categorias.module.css
@@ -37,12 +37,12 @@
   align-self: center;
 }
 
-@media (max-width:1000px) {
+@media (max-width:64rem) {
   .inner{
     gap: 40px;
     }
     .nav {
-      margin-top: 0;
+      margin-top: 16px;
     }
 }
 @media (max-width:50rem) {
