--- a/src/Components/produtos/ProdutoSingle.module.css
+++ b/src/Components/produtos/ProdutoSingle.module.css
@@ -5,7 +5,7 @@
   padding: 0 10px;
   display: grid;
   padding: 0 20px;
-  grid-template-columns: 1fr 1fr ;
+  grid-template-columns: 1fr 350px ;
   flex-direction: column;
   gap: 2rem;
   margin-top: 32px;
@@ -35,6 +35,7 @@ h1 {
 .estoque h3 {
   grid-column: 1/-1;
   width: 100%;
+  font-size:14px;
 }
 .infos {
   display: flex;
