--- a/src/Components/produtos/Produtos.module.css
+++ b/src/Components/produtos/Produtos.module.css
@@ -1,9 +1,5 @@
 .produtosContainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   margin: 0 auto;
-  text-align: center;
   max-width: 1280px;
   min-height: 600px;
   margin-top: 64px;
@@ -12,59 +8,44 @@
 .subtitleProduct {
   margin-bottom: 64px !important;
 }
-
-.produtos {
-  display: grid;
-  grid-template-columns: repeat(3, minmax(170px, 1fr));
-  gap: 64px 20px;
-  padding: 0 20px;
-  min-height: 600px;
+.produtosContainer h3 {
+  padding-bottom: 32px;
 }
 
-@media (max-width:1100px) {
+.produtos {
+  display: flex;
+  gap: 64px 20px;
+  padding: 0;
+  align-items: stretch;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+}
+
+@media (max-width:950px) {
   .produtos {
-    grid-template-columns: repeat(2, minmax(140px, 450px));
-    justify-content: center;
     padding: 0 20px;
-    gap: 32px ;
     }
 }
 
 @media (max-width:50rem) {
     .produtos {
-    grid-template-columns: repeat(2, minmax(140px, 350px));
     gap: 32px ;
     }
   .produtosContainer {
-    margin-top: 0px;
+    margin-top: 32px;
   }
 
   .produtosContainer h3 {
-    margin-bottom: 16px;
+    padding-bottom: 16px;
   }
 }
 
 @media (max-width:40rem) {
-  .produtos {
-    grid-template-columns: repeat(2, minmax(140px, 280px));
-    gap: 32px ;
-    }
 
-  .produtosContainer h3 {
-    margin-bottom: 32px;
-  }
-}
-
-@media (max-width:550px) {
   .produtos {
-    grid-template-columns: repeat(2, minmax(140px, 250px));
-    }
-}
-@media (max-width:30rem) {
-  .produtos {
-    grid-template-columns: repeat(2, minmax(140px, 220px));
     gap: 32px 16px;
     padding: 0px 10px;
     }
-}
 
+}
