--- a/src/Home.module.css
+++ b/src/Home.module.css
@@ -3,14 +3,11 @@
   padding-top: 2.5rem;
 }
 .homeInit{
-  position: relative;
-  max-height: 700px;
+  height: 700px;
 }
 .fotoHome {
-  max-width: 100%;
   width: 100%;
-  max-height: 700px;
-  min-height: 40vh;
+  height: 100%;
   object-fit: cover;
 }
 
@@ -106,22 +103,25 @@ content: '';
 }
 
 @media (max-width: 1024px) {
+  .homeInit {
+    height: 600px;
+  }
   .buttonInit {
     font-size: 16px;
     min-width: 250px;
     min-height: 60px;
     width: 250px;
     }
-    .buttonInit::before {
+  .buttonInit::before {
         min-width: calc(250px + 12px);
         min-height: calc(60px + 12px);
         box-shadow: 0 0 60px rgba(250,255,203,.64);
-      }
-      .buttonInit::after {
+    }
+  .buttonInit::after {
         width: 250px; height: 60px;
         border: 6px solid white;
-      }
-      @keyframes ring {
+    }
+  @keyframes ring {
         0%{
           opacity: 0;
         }
@@ -135,14 +135,14 @@ content: '';
           height:150px;
           opacity: 0;
         }
-      }
+    }
 }
-@media (max-width: 700px) {
-  .fotoHome {
-    position: relative;
-    min-height: 32vh;
-    height: 32vh;
+@media (max-width: 50rem) {
+
+  .homeInit {
+    height: 500px;
   }
+
   .wrapInit {
     bottom: 70px;
   }
@@ -180,7 +180,18 @@ content: '';
       }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 40rem) {
+  .homeInit {
+    height: 400px;
+  }
+
+}
+
+@media (max-width: 35rem) {
+
+  .homeInit {
+    height: 350px;
+  }
 
   .buttonInit {
     font-size: 10px;
