--- a/src/helpers/Image.module.css
+++ b/src/helpers/Image.module.css
@@ -15,6 +15,42 @@
   object-fit: cover;
 }
 
+.imagem2 {
+  opacity: 1;
+  z-index: -1;
+  display: block;
+  grid-area: 1/-1;
+  width: 100%;
+  height: 100%;
+  max-height:400px;
+}
+
+.wrapperImg:hover .img {
+  animation: trocaImg1 .2s ease-in forwards;
+}
+
+/* .wrapperImg:hover .imagem2 {
+  opacity: 1;
+  transition: all .2s;
+} */
+
+@keyframes trocaImg1 {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+@keyframes trocaImg2 {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .skeleton {
   grid-area: 1/1;
   height: 100%;
