--- a/src/Components/produtos/ProdutoSingle.module.css
+++ b/src/Components/produtos/ProdutoSingle.module.css
@@ -86,7 +86,7 @@ h1 {
   cursor: pointer;
 }
 .colorInput label.active {
-  border: 2px solid black;
+  border: 2px solid rgba(0, 0, 0, 0.8);
 }
 .colorInput label.colorOff span {
   pointer-events: none;
@@ -118,6 +118,9 @@ h1 {
   letter-spacing: 1.5px;
   line-height: 14px;
   margin-bottom: 8px;
+}
+.spanCor span {
+  font-size: 12px;
 }
 .form_radio_container{
   display: grid;
@@ -245,8 +248,8 @@ left: -2.25rem;
   align-items: center;
   top: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.85);
-  z-index: 101;
+  background-color: rgba(0, 0, 0);
+  z-index: 1000;
   opacity: 0;
   animation: toAppear .4s ease forwards;
 }
@@ -281,19 +284,45 @@ left: -2.25rem;
   .ProductView_container {
     display: flex ;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0;
     padding: 0;
     margin: 0;
   }
   .ProductView_images {
     width: 100%;
+    padding-top: 50px;
+    height: 70vh;
+    position: sticky;
+    top: 0;
   }
   .ProductView_details {
-    padding: 0 10px 64px 10px;
+      background-color: white;
+      padding: 0 10px 64px 10px;
+      padding-top: 0.5rem;
+      z-index: 100;
   }
 
+  .brand {
+    padding-top: 16px;
+    font-weight: 500;
+  }
+  .name {
+    padding-top: 8px;
+    padding-bottom: 8px;
+  }
+  .price {
+    display: block;
+    width: 100%;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    padding-bottom: 32px;
+  }
   .colors {
     margin-top: 8px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 16px 0;
+  }
+  .spanCor {
+    margin-bottom: 8px;
   }
   .estoque{
     margin-top: 16px;
@@ -312,23 +341,7 @@ left: -2.25rem;
     grid-template-columns: repeat(auto-fill, 2rem);
     height: max-content;
   }
-  .ProductView_images{
-    height: 600px;
-    position: sticky;
-    top: 0;
-  }
-  .ProductView_details {
-    background-color: white;
-    padding-top: 0.5rem;
-    z-index: 100;
-  }
-  .brand{
-    display: block;
-    padding-bottom: 8px;
-  }
-  .name {
-    line-height: 24px;
-  }
+
 }
 
 @media (max-width:35rem) {
@@ -339,8 +352,7 @@ left: -2.25rem;
     height: max-content;
   }
   .ProductView_images{
-    padding-top: 60px;
-    height: 600px;
+
     position: sticky;
     top: 0;
   }
@@ -355,15 +367,5 @@ left: -2.25rem;
   }
   .name {
     line-height: 24px;
-  }
-}
-@media (max-width:30rem) {
-  .ProductView_images{
-    height: 500px;
-  }
-}
-@media (max-width:24rem) {
-  .ProductView_images{
-    height: 450px;
   }
 }
